--- a/style.css
+++ b/style.css
@@ -14,11 +14,6 @@ body {
     fill: currentColor;
     overflow: hidden;
  }
-
-.canvas {
-    position: relative;
-}
-
 .actions {
     position: fixed;
     left: 0;
@@ -66,4 +61,25 @@ body {
 .color-list .active{
     width: 40px;
     height:40px;
+}
+.sizes{
+    position: fixed;
+    right: 10px;
+    top: 17px;
+}
+.sizes .thin{
+    width: 40px;
+    height: 0;
+    border-top: 3px solid black;
+}
+.sizes .thick{
+    width: 40px;
+    height: 0;
+    border-top: 6px solid black;
+    margin-top: 20px;
+}
+.canvas{
+    position: fixed;
+    left:0;
+    top: 0;
 }
